--- a/izvorni_kod/index.html
+++ b/izvorni_kod/index.html
@@ -8,12 +8,11 @@
 </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./manageAssets.js"></script>
+    <script type="module" src="./index.js"></script>
     <title>Document</title>
 </head>
-<body>
+<body style="margin: 0;">
     <canvas id = canvas></canvas>
-    <img src = "./tankBase.png" alt="" id="source" />
-    <img src = "./tankTurret.png" alt="" id="source2" />
-    <script src="./index.js"></script>
 </body>
 </html>
