Add multiplayer base

--- a/izvorni_kod/client/index.html
+++ b/izvorni_kod/client/index.html
@@ -8,9 +8,9 @@
 </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./manageAssets.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
     <script type="module" src="./index.js"></script>
-    <title>Document</title>
+    <title>REEEEE</title>
 </head>
 <body style="margin: 0;">
     <canvas id = canvas></canvas>
