Hotfix: limit username to 20 characters

--- a/izvorni_kod/client/index.html
+++ b/izvorni_kod/client/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="form-label-group">
-        <input type="text" id="nickname" name="nickname" class="form-control" placeholder="Unesi nick..." autofocus>
+        <input type="text" id="nickname" maxlength="20" name="nickname" class="form-control" placeholder="Unesi nick..." autofocus>
         <label for="inputText">Nick:</label>
       </div>
 
