--- a/izvorni_kod/niko_bucalo_web_html_css/index.html
+++ b/izvorni_kod/niko_bucalo_web_html_css/index.html
@@ -65,9 +65,9 @@
       </div>
     
       <p class="mt-5 mb-3 text-muted text-center">&copy; 2021</p>
-  
+    </form>  
   <!-- Button trigger modal za sign in-->
-    </form>
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -92,19 +92,18 @@
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Keep me logged in/Remember me?</label>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Save</button> <!--tu sam mijenjao gumbe i sad mi je save da me vrati nazad a ne za submit-->
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              </div>
             </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save</button> <!--tu sam mijenjao gumbe i sad mi je save da me vrati nazad a ne za submit-->
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
     </div>
 
+
   <!-- Button trigger modal za register-->
-    </form>
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
