--- a/izvorni_kod/client/gamecanvas.html
+++ b/izvorni_kod/client/gamecanvas.html
@@ -7,6 +7,7 @@
     }
 
     #container {
+    position: fixed;
 	width: 300px;
 	height: auto;
     }
@@ -42,7 +43,7 @@
 <body style="margin: 0;">
     <div id="container">
         <div class="row">
-            <div class="name">Player1</div><div class="score">0</div>
+            <div id="1" class="name">Player1</div><div class="score">0</div>
         </div>
         
         <div class="row">
@@ -63,6 +64,10 @@
     </div>
     <canvas id = canvas></canvas>
 </body>
+<script>
+    console.log(sessionStorage)
+    document.getElementById("1").innerHTML = sessionStorage.getItem("nick")
 
+</script>
 
 </html>
