--- a/izvorni_kod/client/gamecanvas.html
+++ b/izvorni_kod/client/gamecanvas.html
@@ -43,6 +43,10 @@
 <body style="margin: 0;">
 
     <div id="leaderboard">
+		<div class="row">
+            <div id="name" class="name">Player1</div><div class="score">0</div>
+        </div>
+
     </div>
 
     <canvas id = canvas></canvas>
