--- a/izvorni_kod/client/gamecanvas.html
+++ b/izvorni_kod/client/gamecanvas.html
@@ -33,7 +33,106 @@
 	width: 25%;
     }
 
+
+	.frame{
+	background:#e0e0de;
+	height:450px;
+	overflow:hidden;
+	padding:0;
+	position: absolute;
+	height: 300px;
+	right: 0px;
+	bottom: 0px;
+	width: 600px;
+	opacity: 0.8;
+	}
+
+	.mytext{
+    border:0;padding:10px;background:whitesmoke;
+	position: absolute;
+    bottom: 0px;
+    right: 40px;
+    width: 484px;
+	}
+	.text{
+		width:100%;display:flex;flex-direction:column;
+	}
+	.text > p:first-of-type{
+		width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
+	}
+	.text > p:last-of-type{
+		width:100%;text-align:right;color:black;margin-bottom:-7px;margin-top:auto;
+	}
+	.text-l{
+		float:left;padding-right:10px;
+	}
+	.text-r{
+		float:right;padding-left:10px;
+	}
+	input:focus{
+    outline: none;
+	}
+
+	ul {
+    width:100%;
+    list-style-type: none;
+    padding:18px;
+    position:absolute;
+    bottom:32px;
+    display:flex;
+    flex-direction: column;
+	}
+
+	.msj:before{
+    width: 0;
+    height: 0;
+    content:"";
+    top:-5px;
+    left:-14px;
+    position:relative;
+    border-style: solid;
+    border-width: 0 13px 13px 0;
+    border-color: transparent #ffffff transparent transparent;
+}
+.msj-rta:after{
+    width: 0;
+    height: 0;
+    content:"";
+    top:-5px;
+    left:14px;
+    position:relative;
+    border-style: solid;
+    border-width: 13px 13px 0 0;
+    border-color: whitesmoke transparent transparent transparent;
+}
+
+	 .macro{
+    margin-top:5px;width:85%;border-radius:5px;padding:5px;display:flex;
+}
+.msj-rta{
+    float:right;background:whitesmoke;
+}
+.msj{
+    float:left;background:white;
+}
+
+
+	 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #d4d4d4;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: #d4d4d4;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: #d4d4d4;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: #d4d4d4;
+}
+
+
 </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="/socket.io/socket.io.js"></script>
@@ -46,9 +145,18 @@
 		<div class="row">
             <div id="name" class="name">Player1</div><div class="score">0</div>
         </div>
-
     </div>
 
+	<div class="frame">
+		<div class="text text-r" style="background:whitesmoke !important">
+				<ul></ul>
+				<input class="mytext" placeholder="Type a message"/>
+		</div>
+	</div>
+
     <canvas id = canvas></canvas>
+
+
+
 </body>
 </html>
