--- a/izvorni_kod/client/gamecanvas.html
+++ b/izvorni_kod/client/gamecanvas.html
@@ -36,14 +36,13 @@
 
 	.frame{
 	background:#e0e0de;
-	height:450px;
 	overflow:hidden;
 	padding:0;
 	position: absolute;
-	height: 300px;
+	height: 25vh;
 	right: 0px;
 	bottom: 0px;
-	width: 600px;
+	width: 48vh;
 	opacity: 0.8;
 	}
 
@@ -51,8 +50,8 @@
     border:0;padding:10px;background:whitesmoke;
 	position: absolute;
     bottom: 0px;
-    right: 40px;
-    width: 484px;
+    right: 3vh;
+    width: 40vh;
 	}
 	.text{
 		width:100%;display:flex;flex-direction:column;
@@ -81,6 +80,8 @@
     bottom:32px;
     display:flex;
     flex-direction: column;
+	max-height: 25vh;
+	overflow:auto;
 	}
 
 	.msj:before{
@@ -118,18 +119,35 @@
 
 
 	 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: #d4d4d4;
+    color: black;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-    color: #d4d4d4;
+    color: black;
 }
 :-ms-input-placeholder { /* IE 10+ */
-    color: #d4d4d4;
+    color: black;
 }
 :-moz-placeholder { /* Firefox 18- */
-    color: #d4d4d4;
+    color: black;
 }
 
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
 
 </style>
 
@@ -148,10 +166,8 @@
     </div>
 
 	<div class="frame">
-		<div class="text text-r" style="background:whitesmoke !important">
 				<ul></ul>
 				<input class="mytext" placeholder="Type a message"/>
-		</div>
 	</div>
 
     <canvas id = canvas></canvas>
