--- a/izvorni_kod/client/gamecanvas.html
+++ b/izvorni_kod/client/gamecanvas.html
@@ -82,6 +82,7 @@
     flex-direction: column;
 	max-height: 25vh;
 	overflow:auto;
+	word-wrap:break-word;
 	}
 
 	.msj:before{
@@ -167,7 +168,7 @@
 
 	<div class="frame">
 				<ul></ul>
-				<input class="mytext" placeholder="Type a message"/>
+				<input class="mytext" placeholder="Type a message" maxlength="160"/>
 	</div>
 
     <canvas id = canvas></canvas>
