--- a/src/client/index.html
+++ b/src/client/index.html
@@ -42,12 +42,12 @@
       <div class="text-center mb-4">
         <img class="mb-4" src="assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> <!--tu neki tenkic svg?-->
         <h1 class="h3 mb-3 font-weight-normal">Welcome</h1>
-        <p>Biggest online tank game.</p>
+        <p>Tanky</p>
       </div>
 
       <div class="form-label-group">
-        <input type="text" id="nickname" maxlength="20" name="nickname" class="form-control" placeholder="Unesi nick..." autofocus>
-        <label for="inputText">Nick:</label>
+        <input type="text" id="nickname" maxlength="20" name="nickname" class="form-control" autofocus>
+        <label for="inputText">Nickname:</label>
       </div>
 
 
@@ -58,12 +58,12 @@
       <div class="container" style="margin-top: 25px;margin-bottom: 25px;">
         <div class="row">
           <div class="col-sm">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+              <button type="button" class="btn btn-primary disabled"> <!-- <data-toggle="modal" data-target="#exampleModalCenter"> -->
               Sign in
             </button>
           </div>
           <div class="col-sm">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter2" style="float: right">Register</button>
+              <button type="button" class="btn btn-primary disabled" style="float: right">Register</button> <!-- data-toggle="modal" data-target="#exampleModalCenter2"  -->
           </div>
         </div>
       </div>
