--- a/src/client/index.html
+++ b/src/client/index.html
@@ -40,7 +40,7 @@
     <form class="form-signin" onkeydown="return event.key != 'Enter';"> <!--tu cu morat stavit <form action="/action_page.php" method="get"> da bi se poslao zahtjev-->
       
       <div class="text-center mb-4">
-        <img class="mb-4" src="assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> <!--tu neki tenkic svg?-->
+        <img class="mb-4 rounded" src="assets/brand/tanky_logo_final.png" alt="" width="200" height="200"> <!--tu neki tenkic svg?-->
         <h1 class="h3 mb-3 font-weight-normal">Welcome</h1>
         <p>Tanky</p>
       </div>
